[gd_scene load_steps=4 format=3 uid="uid://bkgtg8lekpv74"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_qi2p4"]
[ext_resource type="Texture2D" uid="uid://7ubfmbrac0ip" path="res://sprites/character/firefly.png" id="2_md0e3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4gyqm"]
radius = 10.6667

[node name="enemy" type="CharacterBody2D"]
script = ExtResource("1_qi2p4")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_md0e3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4gyqm")

[node name="Inmu" type="Timer" parent="."]
wait_time = 0.1

[node name="AttackEnemy" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Inmu" to="." method="_on_inmu_timeout"]
[connection signal="timeout" from="AttackEnemy" to="." method="_on_attack_enemy_timeout"]
